--- a/app/templates/blog/post_detail.html
+++ b/app/templates/blog/post_detail.html
@@ -14,7 +14,7 @@
 {% endblock %}
 
 {% block content %}
-<div x-data="postDetailApp()" x-init="loadPost('{{ slug }}')">
+<div x-data="postDetailApp()" x-init="loadPost('{{ slug }}')" data-content-id="" x-bind:data-content-id="post ? post.id : ''">
     <!-- 載入中 -->
     <div x-show="loading" class="flex justify-center items-center py-20">
         <div class="animate-spin rounded-full h-12 w-12 border-b-2 border-blue-600"></div>
@@ -75,7 +75,7 @@
             <h3 class="text-lg font-semibold text-gray-900 mb-3">標籤</h3>
             <div class="flex flex-wrap gap-2">
                 <template x-for="tag in post.tags" :key="tag.id">
-                    <a :href="'/tag/' + tag.slug" 
+                    <a :href="'/tags/' + tag.slug + '/posts'" 
                        class="inline-block bg-gray-100 text-gray-700 px-3 py-1 rounded-full text-sm hover:bg-gray-200 transition-colors"
                        x-text="'#' + tag.name"></a>
                 </template>
