--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -168,7 +168,7 @@
                             </div>
                             
                             <!-- 查看詳情按鈕 -->
-                            <a :href="'/products/' + product.slug" 
+                            <a :href="'/product/' + product.slug" 
                                class="block w-full bg-gray-900 text-white text-center py-3 rounded-xl font-medium hover:bg-primary-600 transition-colors duration-200">
                                 查看詳情
                             </a>
